--- a/index.html
+++ b/index.html
@@ -31,18 +31,39 @@
         <!--container-->
         <div class="pt-5 pb-5 container-background">
             <div class="container border bg-white p-4">
-                <div class="row align-items-center border-bottom p-4 ">
+                <div class="row border-bottom p-4 ">
                     <div class="col">
-                        <h2>Click a button to see gifs of that magical creature.
+                        <h2>Click a button to see GIFs of that magical creature.
                             <br>
                             <small class="text-muted">Or add some of your own.</small>
                         </h2>
                     </div>
                 </div>  
-                <!--gifs-->
-                <div class="p-4">
-                    <div id="gif-buttons"></div>
-                    <div id="gifs-display"></div>
+                <!--form-->
+                <div class="col bg-light p-4 mt-3">  
+                    <form>
+                        <div class="row ">
+                            <div class="col">
+                                <label class="users-choice">Enter something that you want to see to create a button of <i>your</i> topic!</label>
+                                <input type="text" class="form-control m-2" id="user-topic" onkeypress="return event.keyCode != 13">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-primary" id="topic-submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="gif-container">
+                    <div class="border-bottom p-4">
+                        <div class="row">
+                            <div class="col p-2">
+                                <div id="gif-buttons"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <div id="gifs-display"></div>
+                    </div>
                 </div>
             </div>
         </div>
